--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "react-router-dom": "^6.14.2",
-    "typescript": "^5.0.2",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
-    "vite": "^4.4.5"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "swiper": "^10.1.0"
   }
 }
