--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "axios": "^1.4.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,8 +26,8 @@
     "react-router-dom": "^6.14.2",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
+    "swiper": "^10.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "swiper": "^10.1.0"
+    "vite": "^4.4.5"
   }
 }
